// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidenav Layout Component render correctly 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <ConnectFunction
    enqueueSnackbar={[MockFunction]}
  />
</Provider>
`;

exports[`sidenav Layout Container render correctly 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <SidenavContainer
    enqueueSnackbar={[MockFunction]}
  />
</Provider>
`;
